Build ceph-volume separately to work around hard coded user
Install snap with devmode, drop use of raw block device as
support is not really implemented and LVM is required for
operation of OSD and in line with future planned
disk configuration dependencies.

Add only one OSD until we figure out how to properly have
different backing stores for the `scsi_debug` kernel module or
find an alternative approach for testing with block devices.

--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -35,8 +35,18 @@ jobs:
         shell: bash
         run: |
           set -euxo pipefail
+          sudo apt install -y lsscsi
+          sudo modprobe scsi_debug add_host=1 dev_size_mb=200 per_host_store=1
           sudo microceph init
-          sudo microceph.ceph-mon -d --cluster ceph --id $(hostname -s) &
+          sleep 5
+          echo
+          echo
+          sudo microceph.ceph -s
+          for raw_disk in $(sudo lsscsi|awk '/scsi_debug/{print$6}'); do
+              sudo microceph.ceph-volume lvm prepare \
+                  --data $raw_disk
+          done
+          sudo microceph.ceph-volume lvm activate --all || true
           sleep 5
           echo
           echo
