patch/ceph-volume: Don't chown if target has expected ownership
The Ceph processes will be running under a under a Mandatory
Access Control system as enforced by strict snap confinement.
Dropping privileges in such an environment is not necessary and
consequently performing the chown operation is not necessary
either.

We do not want to allow the snap to change ownership of arbritrary
special device files so we provide this patch instead to stop it
from trying to do it in the first place.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -98,6 +98,7 @@ parts:
     override-pull: |
       snapcraftctl pull
       patch -p1 < $SNAPCRAFT_PROJECT_DIR/patch/ceph-volume-drop-hardcoded-user.patch
+      patch -p1 < $SNAPCRAFT_PROJECT_DIR/patch/ceph-volume-check-owner-before-chown.patch
     override-build: |
       dpkg-source --before-build .
       cd src/ceph-volume
