--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -14,15 +14,35 @@ jobs:
         run: |
           set -euxo pipefail
           sudo apt remove --purge lxd lxd-client
-          # for in-flight snapd interfaces
-          sudo add-apt-repository -y ppa:fnordahl/dev
-          sudo apt -y install snapd
           sudo snap install snapcraft --edge --classic
           sudo snap install lxd
           sudo lxd waitready
           sudo lxd init --auto
           sudo chmod 0666 /var/snap/lxd/common/lxd/unix.socket
           echo "/snap/bin" >> $GITHUB_PATH
+
+      - name: Maybe build snapd
+        shell: bash
+        run: |
+          set -euxo pipefail
+          if [ ${{ matrix.confinement }} = "devmode" ]; then
+            echo skip
+            exit 0
+          fi
+          mkdir -p src/github.com/snapcore/
+          cd ./src/github.com/snapcore/
+          git clone https://github.com/snapcore/snapd
+          cd snapd
+          git config user.email "ci-bot@localhost"
+          git config user.name "MicroCeph CI builder"
+          git remote update
+          git fetch origin pull/9547/head:pr-9547
+          git fetch origin pull/9585/head:pr-9585
+          git checkout pr-9547
+          git cherry-pick pr-9585
+          snapcraft snap --use-lxd
+          sudo snap install *.snap --dangerous
+          snapcraft clean --use-lxd
 
       - name: Checkout
         uses: actions/checkout@v2
@@ -46,9 +66,10 @@ jobs:
           if [ -z "$devmode" ]; then
               for interface in \
                       block-devices \
+                      device-mapper-support \
+                      device-mapper-control \
                       hardware-observe \
                       lvm-control \
-                      lvm-support \
                       mount-observe \
                       network \
                       network-bind \
