--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -33,7 +33,7 @@ apps:
     plugs:
       - block-devices
       - device-mapper-control
-      - device-mapper-support
+      - device-mapper-devices
       - hardware-observe
       - lvm-control
       - mount-observe
@@ -66,7 +66,7 @@ apps:
     plugs:
       - block-devices
       - device-mapper-control
-      - device-mapper-support
+      - device-mapper-devices
       - hardware-observe
       - lvm-control
       - mount-observe
@@ -79,7 +79,7 @@ apps:
     plugs:
       - block-devices
       - device-mapper-control
-      - device-mapper-support
+      - device-mapper-devices
       - hardware-observe
       - lvm-control
       - mount-observe
