snapcraft: update PYTHONPATH as only lib/python3 is primed
Note: if we ever ship version specific python libs, core22
uses python 3.10.

Signed-off-by: Simon Deziel <simon.deziel@canonical.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -10,7 +10,7 @@ confinement: strict
 
 environment:
   LD_LIBRARY_PATH: $SNAP/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/lib/x86_64-linux-gnu/ceph:$SNAP/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/lib/x86_64-linux-gnu/ceph:$SNAP/lib/x86_64-linux-gnu/ceph/compressor:$SNAP/lib/x86_64-linux-gnu/ceph/crypto:$SNAP/lib/x86_64-linux-gnu/ceph/erasure-code
-  PYTHONPATH: $SNAP/lib/python3.8:$SNAP/lib/python3/dist-packages
+  PYTHONPATH: $SNAP/lib/python3/dist-packages
 
 layout:
   /usr/lib/x86_64-linux-gnu/ceph:
