snapcraft: add link to GitHub repo
Signed-off-by: Simon Deziel <simon.deziel@canonical.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -2,6 +2,7 @@ name: microceph
 base: core22
 version: git
 grade: devel
+source-code: https://github.com/canonical/microceph.git
 summary: Simple clustered Ceph deployment
 description: |-
  Self-contained self-deployment with clustering.
