Show ceph status before checking if healthy
This can be useful when debugging problems.

Signed-off-by: Simon Deziel <simon.deziel@canonical.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -66,10 +66,11 @@ jobs:
           # Wait for OSDs to become up
           sleep 30
 
-          sudo microceph.ceph health | grep -xF "HEALTH_OK"
-
           # Show ceph's status
           sudo microceph.ceph status
+
+          # Confirm ceph is healthy
+          sudo microceph.ceph health | grep -xF "HEALTH_OK"
 
       - name: Upload artifacts
         if: always()
