--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,11 +48,11 @@ jobs:
             /var/lib/snapd/apparmor/profiles/snap.microceph.microceph \
             /var/lib/snapd/apparmor/profiles/snap.microceph.osd
 
-          # Add OSDs backed by loop devices
+          # Add OSDs backed by loop devices on /mnt (ephemeral "large" disk attached to GitHub action runners)
           i=0
           for l in a b c; do
-            loop_file="$(mktemp XXXX.img)"
-            truncate -s 1G "${loop_file}"
+            loop_file="$(sudo mktemp -p /mnt XXXX.img)"
+            sudo truncate -s 1G "${loop_file}"
             loop_dev="$(sudo losetup --show -f "${loop_file}")"
 
             # XXX: the block-devices plug doesn't allow accessing /dev/loopX
