--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,8 +18,7 @@ jobs:
           sudo snap refresh lxd --channel=latest
           sudo snap set lxd daemon.group=adm
           sudo lxd init --auto
-          # XXX: building a snap with a core22 base requires snapcraft 7.x not yet in latest/stable
-          sudo snap install snapcraft --classic --channel=7.x/candidate
+          sudo snap install snapcraft --classic
 
       - name: Build snaps
         run: snapcraft
