--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo snap refresh lxd --channel=latest
+          sudo snap refresh
           sudo snap set lxd daemon.group=adm
           sudo lxd init --auto
           sudo snap install snapcraft --classic
