microceph: Add initial Go implementation
Signed-off-by: Stéphane Graber <stgraber@ubuntu.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -30,7 +30,11 @@ apps:
   daemon:
     command: commands/daemon.start
     daemon: simple
-
+    plugs:
+      - block-devices
+      - hardware-observe
+      - network
+      - network-bind
   mds:
     command: commands/mds.start
     daemon: simple
@@ -71,9 +75,7 @@ apps:
   microceph:
     command: commands/microceph
     plugs:
-      - block-devices
       - network
-      - network-bind
   rbd:
     command: commands/rbd
     plugs:
@@ -134,6 +136,94 @@ parts:
       usr/bin/: bin/
     prime:
       - bin/uuidgen
+
+  dqlite:
+    build-attributes: [core22-step-dependencies]
+    after:
+      - raft
+      - sqlite
+    source: https://github.com/canonical/dqlite
+    source-type: git
+    source-depth: 1
+    plugin: autotools
+    autotools-configure-parameters:
+      - --prefix=
+    stage-packages:
+      - libuv1
+    build-packages:
+      - libuv1-dev
+      - pkg-config
+    organize:
+      usr/lib/: lib/
+    prime:
+      - lib/libdqlite*so*
+      - lib/*/libuv*
+
+  raft:
+    build-attributes: [core22-step-dependencies]
+    source: https://github.com/canonical/raft
+    source-type: git
+    source-depth: 1
+    plugin: autotools
+    autotools-configure-parameters:
+      - --prefix=
+    stage-packages:
+      - libuv1
+      - liblz4-1
+    build-packages:
+      - libuv1-dev
+      - liblz4-dev
+      - pkg-config
+    organize:
+      usr/lib/: lib/
+    prime:
+      - lib/libraft*so*
+      - lib/*/libuv.so*
+
+  sqlite:
+    build-attributes: [core22-step-dependencies]
+    source: https://github.com/sqlite/sqlite
+    source-type: git
+    source-depth: 1
+    source-tag: version-3.39.2
+    plugin: autotools
+    autotools-configure-parameters:
+      - --prefix=
+    build-packages:
+      - pkg-config
+      - tcl
+    prime:
+      - bin/sqlite3
+      - lib/libsqlite3*so*
+
+  microceph:
+    build-attributes: [core22-step-dependencies]
+    source: microceph/
+    after:
+      - dqlite
+    build-snaps:
+      - go
+    plugin: nil
+    override-pull: |
+      snapcraftctl pull
+      set -ex
+
+      # Download the dependencies
+      go get -d -v ./...
+    override-build: |
+      set -ex
+
+      # Setup build environment
+      export CGO_CFLAGS="-I${SNAPCRAFT_STAGE}/include/ -I${SNAPCRAFT_STAGE}/usr/local/include/"
+      export CGO_LDFLAGS="-L${SNAPCRAFT_STAGE}/lib/ -L${SNAPCRAFT_STAGE}/usr/local/lib/"
+      export CGO_LDFLAGS_ALLOW="(-Wl,-wrap,pthread_create)|(-Wl,-z,now)"
+
+      # Build the binaries
+      go build -o "${SNAPCRAFT_PART_INSTALL}/bin/microceph" ./cmd/microceph
+      go build -o "${SNAPCRAFT_PART_INSTALL}/bin/microcephd" -tags=libsqlite3 ./cmd/microcephd
+    prime:
+      - bin/microceph
+      - bin/microcephd
 
   wrappers:
     plugin: dump
