osd: Move to SIGHUP based spawning
Closes #29

Signed-off-by: Stéphane Graber <stephane.graber@canonical.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -58,6 +58,7 @@ apps:
       - network-bind
   osd:
     command: commands/osd.start
+    reload-command: commands/osd.reload
     daemon: simple
     install-mode: disable
     stop-mode: sigterm-all
