snapcraft: Allow hardware-observe for monitors
Signed-off-by: Stéphane Graber <stephane.graber@canonical.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -47,6 +47,7 @@ apps:
     daemon: simple
     install-mode: disable
     plugs:
+      - hardware-observe
       - network
       - network-bind
   mgr:
