snapcraft: Fix osd volume creation
Signed-off-by: Stéphane Graber <stephane.graber@canonical.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -128,6 +128,7 @@ parts:
       - lib/*/librbd.so*
       - lib/*/librdmacm.so*
       - lib/*/libsnappy.so*
+      - lib/*/rados-classes
       - lib/python3
       - share/ceph
 
