snapcraft: Add microceph slot
Signed-off-by: Stéphane Graber <stephane.graber@canonical.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -35,6 +35,8 @@ apps:
       - hardware-observe
       - network
       - network-bind
+    slots:
+      - microceph
   mds:
     command: commands/mds.start
     daemon: simple
