snapcraft: Set grade to stable
Signed-off-by: Stéphane Graber <stgraber@ubuntu.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,7 +1,7 @@
 name: microceph
 base: core22
 version: git
-grade: devel
+grade: stable
 source-code: https://github.com/canonical/microceph.git
 summary: Simple clustered Ceph deployment
 description: |-
