--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -147,7 +147,6 @@ parts:
     build-attributes: [core22-step-dependencies]
     after:
       - raft
-      - sqlite
     source: https://github.com/canonical/dqlite
     source-type: git
     source-depth: 1
@@ -156,8 +155,10 @@ parts:
       - --prefix=
     stage-packages:
       - libuv1
+      - libsqlite3-0
     build-packages:
       - libuv1-dev
+      - libsqlite3-dev
       - pkg-config
     organize:
       usr/lib/: lib/
@@ -185,22 +186,6 @@ parts:
     prime:
       - lib/libraft*so*
       - lib/*/libuv.so*
-
-  sqlite:
-    build-attributes: [core22-step-dependencies]
-    source: https://github.com/sqlite/sqlite
-    source-type: git
-    source-depth: 1
-    source-tag: version-3.39.2
-    plugin: autotools
-    autotools-configure-parameters:
-      - --prefix=
-    build-packages:
-      - pkg-config
-      - tcl
-    prime:
-      - bin/sqlite3
-      - lib/libsqlite3*so*
 
   microceph:
     build-attributes: [core22-step-dependencies]
