Fix OSD startup script liveness check
In addition to checking for admin socket presence, also check there is
a process listening at the other end in order to prevent false
positives in checking ceph-osd startup due to a stale socket file

Signed-off-by: Peter Sabaini <peter.sabaini@canonical.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -95,6 +95,7 @@ parts:
       - ceph-mgr
       - ceph-mon
       - ceph-osd
+      - lsof
     organize:
       usr/bin/: bin/
       usr/sbin/: bin/
@@ -133,6 +134,7 @@ parts:
       - lib/*/rados-classes
       - lib/python3
       - share/ceph
+      - bin/lsof
 
   deps:
     plugin: nil
