--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -74,6 +74,12 @@ jobs:
           # Confirm ceph is healthy
           sudo microceph.ceph health | grep -xF "HEALTH_OK"
 
+          # Check health after restart
+          sudo snap stop microceph ; sleep 1 ; sudo snap start microceph ; sleep 7
+          sudo microceph.ceph status
+          sudo microceph.ceph health | grep -xF "HEALTH_OK"
+          pgrep ceph-osd || ( echo "No ceph-osd process found" ; exit 1 )
+
       - name: Upload artifacts
         if: always()
         uses: actions/upload-artifact@v3
