--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -112,26 +112,39 @@ parts:
       - bin/rbd
       - lib/*/ceph
       - lib/*/libaio.so*
+      - lib/*/libboost_context.so*
       - lib/*/libboost_iostreams.so*
       - lib/*/libboost_program_options.so*
       - lib/*/libboost_python310.so*
       - lib/*/libboost_thread.so*
       - lib/*/libcephfs.so*
       - lib/*/libcephsqlite.so*
+      - lib/*/libcurl-gnutls.so*
       - lib/*/libdaxctl.so*
       - lib/*/libfuse3.so*
       - lib/*/libibverbs.so*
+      - lib/*/libicudata.so*
+      - lib/*/libicuuc.so*
+      - lib/*/liblber-2.5.so*
+      - lib/*/libldap-2.5.so*
       - lib/*/liblua5.3.so*
       - lib/*/libndctl.so*
+      - lib/*/libnghttp2.so*
       - lib/*/libnuma.so*
+      - lib/*/liboath.so*
+      - lib/*/libpmemobj.so*
       - lib/*/libpmem.so*
+      - lib/*/libpsl.so*
       - lib/*/libpython3.10.so*
+      - lib/*/librabbitmq.so*
       - lib/*/librados.so*
       - lib/*/librbd.so*
       - lib/*/librdmacm.so*
+      - lib/*/librtmp.so*
+      - lib/*/libsasl2.so*
       - lib/*/libsnappy.so*
-      - lib/*/rados-classes
       - lib/python3
+      - lib/*/rados-classes
       - share/ceph
 
   deps:
