snapcraft: Fix log directory
Signed-off-by: Stéphane Graber <stephane.graber@canonical.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -23,7 +23,7 @@ layout:
   /var/lib/ceph:
     symlink: $SNAP_COMMON/data
   /var/log/ceph:
-    symlink: $SNAP_COMMON/log
+    symlink: $SNAP_COMMON/logs
 
 apps:
   # Service
