Add support for rgw-admin
Also add more testing

Signed-off-by: Peter Sabaini <peter.sabaini@canonical.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -88,6 +88,10 @@ apps:
     command: commands/ceph
     plugs:
       - network
+  "radosgw-admin":
+    command: commands/radosgw-admin
+    plugs:
+      - network
   microceph:
     command: commands/microceph
     plugs:
