--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -111,6 +111,17 @@ jobs:
           sudo microceph.ceph health | grep -xF "HEALTH_OK"
           pgrep ceph-osd || { echo "No ceph-osd process found" ; exit 1; }
 
+      - name: Exercise RGW
+        run: |
+          set -eux
+          sudo microceph.radosgw-admin user create --uid=test --display-name=test
+          sudo microceph.radosgw-admin key create --uid=test --key-type=s3 --access-key fooAccessKey --secret-key fooSecretKey
+          sudo apt-get -qq install s3cmd
+          echo hello-radosgw > ~/test.txt
+          s3cmd --host localhost --host-bucket="localhost/%(bucket)" --access_key=fooAccessKey --secret_key=fooSecretKey --no-ssl mb s3://testbucket
+          s3cmd --host localhost --host-bucket="localhost/%(bucket)" --access_key=fooAccessKey --secret_key=fooSecretKey --no-ssl put -P ~/test.txt s3://testbucket
+          curl -s http://localhost/testbucket/test.txt | grep -F hello-radosgw
+
       - name: Upload artifacts
         if: always()
         uses: actions/upload-artifact@v3
